# regex-trigram

./: LICENSE  README.md  regex-trigram.cabal
src/Text/Regex/: Trigram.hs
