name:                regex-trigram
version:             0.0.1
synopsis:            Regex search over large data sets using a trigram index
description:         Please see README.md
homepage:            https://github.com/micxjo/regex-trigram
license:             BSD3
license-file:        LICENSE
author:              Micxjo Funkcio <micxjo@fastmail.com>
maintainer:          Micxjo Funkcio <micxjo@fastmail.com>
copyright:           (c) 2016 Micxjo Funkcio
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Regex.Trigram
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns
  build-depends:       base >= 4.7 && < 5
                     , regex-tdfa
                     , unordered-containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/micxjo/regex-trigram
